--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
     "@supabase/supabase-js": "^2.87.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
