--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node src/server.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.87.1",
